# mybar

./: .mybar.json  .readthedocs.yaml  LICENSE  README.md  README.rst  bar.conf  bar.json  conf.json  events.py  example_fontawesome.conf  field_funcs.py  mocpline.py  mybar.py  mybar_globals.py  new_stack_parser.py  requirements.txt  setup.cfg  setup.py  stack_parser.py  test_threads.py
docs/: .conf.py.swp  .index.rst.swp  README.rst  _custom_types.py  api.rst  bars.rst  cli.rst  conf.py  configuration.rst  fields.rst  index.rst  install.rst  intro.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: fontawesome_icons.conf
mybar/: __init__.py  __main__.py  _field_funcs.py  _setups.py  _types.py  bar.py  base.py  cli.py  config.py  constants.py  custom_types.py  errors.py  field.py  field_funcs.py  formatable.py  formatting.py  log.py  namespaces.py  new_parse_conf.py  new_parser.py  omg_guess_what_a_new_parser.py  parse_conf.py  parse_conf_new.py  setups.py  templates.py  test_config.conf  types.py  utils.py
