[metadata]
name = mybar
version = 0.7
description = An async status bar with a highly customizable API.
long_description = file: README.md
long_description_content_type = text/markdown
author = lonelyabsol
#url = attr: mybar.__url__
url = https://github.com/lonelyabsol/mybar
#copyright = Copyright (c) 2021-present by LonelyAbsol.

project_urls =
    GitHub: repo = https://github.com/lonelyabsol/mybar

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    # Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Desktop Environment
    Topic :: Utilities

license = MIT
license_files = LICENSE
# keywords =

platforms = Platform Independent


[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >= 3.11
