[metadata]
name = mybar
version = attr: mybar.__version__
author = akyuute
description = Craft highly customizable status bars with ease.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/akyuute/mybar
copyright = Copyright (c) 2021-present akyuute

project_urls =
    GitHub: repo = https://github.com/akyuute/mybar
    ReadTheDocs: documentation = https://mybar.readthedocs.io

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    # Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Desktop Environment
    Topic :: Utilities

license = MIT
license_files = LICENSE
keywords = status bar, bar, command line, i3, threads, async, API,

platforms = Platform Independent


[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >= 3.12
